components/datepicker/src/styles/style.scss
// Copyright (c) 2022 Alaska Airlines. All right reserved. Licensed under the Apache-2.0 license
// See LICENSE in the project root for license information.

/* stylelint-disable max-nesting-depth, declaration-no-important, selector-class-pattern, declaration-empty-line-before */

@use "@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska" as v;
@use "@aurodesignsystem/design-tokens/dist/legacy/auro-classic/SCSSVariables" as vac;

@use '@aurodesignsystem/webcorestylesheets/src/breakpoints' as vb;
@use '@aurodesignsystem/webcorestylesheets/src/utilityClasses/displayProperties';

.accents {
  flex-grow: 0;
  flex-shrink: 0;
  display: flex;
  align-items: center;
  justify-content: center;

  &.left {
    padding-right: var(--ds-size-100, vac.$ds-size-100);
  }

  &.right {
    width: var(--ds-size-400, vac.$ds-size-400);
  }
}

.mainContent {
  height: 100%;
  max-height: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  overflow: hidden;
}

.inputSection {
  display: flex;
  flex-direction: row;
  align-items: center;

  width: 100%;
  margin: 0 auto;
}

.inputContainer {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;

  &:first-of-type {
    justify-content: flex-end;
  }

  &:last-of-type {
    justify-content: flex-start;
  }
}

.dpTriggerContent {
  width: 100%;
}


@include vb.auro_breakpoint($max: vac.$ds-grid-breakpoint-sm) {
  ::part(popover) {
    position: fixed !important;
    top: 0 !important;
    left: 0 !important;
    width: 100vw !important;
    height: 100vh !important;
    margin-bottom: var(--ds-size-200, vac.$ds-size-200);
    transform: unset !important;
  }

  .calendarWrapper {
    display: flex;
    height: 100dvh;
    flex-direction: row;
    justify-content: center;
  }
}

